Update of ReadMe

--- a/LinkedLists/resources/ReadMe
+++ b/LinkedLists/resources/ReadMe
@@ -3,7 +3,7 @@
 This project is to be used as a guide to understand linked structures and pointers work. 
 
 It is seperated into a bunch of different classes to explain the different operations
-that can be done on both Single Linked Lists and Double Linked Lists.
+that can be done on Single Linked Lists..
 
 A description of the following classes are outlined below -
 
