--- a/SingleLinkedLists/resources/ReadMe
+++ b/SingleLinkedLists/resources/ReadMe
@@ -3,11 +3,12 @@
 This project is to be used as a guide to understand linked structures and pointers work. 
 
 It is seperated into a bunch of different classes to explain the different operations
-that can be done on Single Linked Lists..
+that can be done on Single Linked Lists. The programs are independantly runnable to demonstrate
+the various operations that can be performed on a single linked list.
 
 A description of the following classes are outlined below -
 
-1. SingleLinkedListNode.java
+1. Node.java
 
 This is the data structure that represents a node in a Single Linked List. The node only
 contains a single pointer to it's successor and only contains a single data field (Name).
@@ -18,6 +19,14 @@ It contains getter methods to retrieve the data fields and also the pointers to 
 
 This class details the implementation of searching for an item in a Single Linked List. It 
 covers the search performed both iteratively and recurisively.
+
+3. InsertIntoHeadOfSingleLinkedList
+
+This class details the implementation of inserting an item into the head of a Single Linked List.
+
+4. InsertIntoEndOfSingleLinkedList
+
+This class details the implementation of inserting an item into the tail of a Single Linked List.
 
 References - 
 
